--- a/share.css
+++ b/share.css
@@ -31,6 +31,17 @@ iframe {
     border-radius: 0.25rem;
 }
 
+audio {
+    display: block;
+}
+
+.demo-row {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+}
+
 #layout {
     display: flex;
     flex-flow: row wrap;
@@ -47,6 +58,7 @@ iframe {
 
 #title {
     text-align: center;
+    margin-block-start: 4rem;
     margin-block-end: 24px;
     font-size: 32px;
     line-height: 48px;
